// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KibanaPageTemplate render basic template 1`] = `
<div
  class="euiPage euiPageTemplate kbnPageTemplate emotion-euiPage-row-grow"
  style="min-height:460px"
>
  <div
    class="euiPageBody emotion-euiPageBody"
  >
    <header
      class="euiPageHeader emotion-euiPageHeader-l-border"
      title="test"
    >
      <div
        class="euiPageHeaderContent emotion-euiPageHeaderContent-l"
        style="max-width:1200px"
      >
        <div
          class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
        >
          <div
            class="euiFlexItem emotion-euiFlexItem-grow-1"
          >
            <div
              class="euiText emotion-euiText-constrainedWidth-m"
            >
              <p>
                test
              </p>
            </div>
          </div>
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-wrap-l-flexStart-stretch-rowReverse"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                test
              </div>
            </div>
          </div>
        </div>
      </div>
    </header>
    <div
      class="euiPanel euiPanel--plain euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-plain"
      role="main"
    >
      <div
        class="euiPageContentBody euiPageContentBody--paddingLarge euiPageContentBody--restrictWidth-default"
      />
    </div>
  </div>
</div>
`;

exports[`KibanaPageTemplate render custom empty prompt only 1`] = `
<KibanaPageTemplateInner
  isEmptyState={true}
>
  <EuiEmptyPrompt
    title={
      <h1>
        custom test
      </h1>
    }
  />
</KibanaPageTemplateInner>
`;

exports[`KibanaPageTemplate render custom empty prompt with page header 1`] = `
<KibanaPageTemplateInner
  isEmptyState={true}
  pageHeader={
    Object {
      "description": "test",
      "iconType": "test",
      "rightSideItems": Array [
        "test",
      ],
      "title": "test",
    }
  }
>
  <EuiEmptyPrompt
    title={
      <h1>
        custom test
      </h1>
    }
  />
</KibanaPageTemplateInner>
`;

exports[`KibanaPageTemplate render default empty prompt 1`] = `
<KibanaPageTemplateInner
  isEmptyState={true}
  pageHeader={
    Object {
      "description": "test",
      "iconType": "test",
      "rightSideItems": Array [
        "test",
      ],
      "title": "test",
    }
  }
/>
`;

exports[`KibanaPageTemplate render noDataContent 1`] = `
<WithSolutionNavBar(NoDataConfigPage)
  noDataConfig={
    Object {
      "actions": Object {
        "beats": Object {},
        "custom": Object {},
        "elasticAgent": Object {},
      },
      "docsLink": "test",
      "solution": "Elastic",
    }
  }
  solutionNav={
    Object {
      "icon": "solution",
      "items": Array [
        Object {
          "id": "1",
          "items": Array [
            Object {
              "id": "1.1",
              "items": undefined,
              "name": "Ingest Node Pipelines",
              "tabIndex": undefined,
            },
            Object {
              "id": "1.2",
              "items": undefined,
              "name": "Logstash Pipelines",
              "tabIndex": undefined,
            },
            Object {
              "id": "1.3",
              "items": undefined,
              "name": "Beats Central Management",
              "tabIndex": undefined,
            },
          ],
          "name": "Ingest",
          "tabIndex": undefined,
        },
        Object {
          "id": "2",
          "items": Array [
            Object {
              "id": "2.1",
              "items": undefined,
              "name": "Index Management",
              "tabIndex": undefined,
            },
            Object {
              "id": "2.2",
              "items": undefined,
              "name": "Index Lifecycle Policies",
              "tabIndex": undefined,
            },
            Object {
              "id": "2.3",
              "items": undefined,
              "name": "Snapshot and Restore",
              "tabIndex": undefined,
            },
          ],
          "name": "Data",
          "tabIndex": undefined,
        },
      ],
      "name": "Solution",
    }
  }
/>
`;

exports[`KibanaPageTemplate render solutionNav 1`] = `
<div
  class="euiPage euiPageTemplate kbnPageTemplate emotion-euiPage-row-grow"
  style="min-height:460px"
>
  <div
    class="euiPageSideBar euiPageSideBar--sticky kbnPageTemplate__pageSideBar"
  >
    <nav
      aria-hidden="false"
      aria-labelledby="euiSideNav_generated-id_heading"
      class="euiSideNav kbnPageTemplateSolutionNav"
    >
      <h2
        class="euiTitle euiSideNav__heading emotion-euiTitle-xs"
        id="euiSideNav_generated-id_heading"
      >
        <div
          aria-label="Solution"
          class="euiAvatar euiAvatar--m euiAvatar--user kbnPageTemplateSolutionNavAvatar emotion-euiAvatar-m-user-plain"
          role="img"
          title="Solution"
        >
          <span
            class="euiAvatar__icon"
            data-euiicon-type="solution"
          />
        </div>
        <strong>
          Solution
        </strong>
      </h2>
      <div
        class="euiSideNav__content euiSideNav__contentMobile-xs euiSideNav__contentMobile-s"
        id="euiSideNav_generated-id_content"
      >
        <div
          class="euiSideNavItem euiSideNavItem--root euiSideNavItem--hasChildItems"
        >
          <div
            class="euiSideNavItemButton"
          >
            <span
              class="euiSideNavItemButton__content"
            >
              <span
                class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
              >
                Ingest
              </span>
            </span>
          </div>
          <div
            class="euiSideNavItem__items"
          >
            <div
              class="euiSideNavItem euiSideNavItem--trunk"
            >
              <div
                class="euiSideNavItemButton"
              >
                <span
                  class="euiSideNavItemButton__content"
                >
                  <span
                    class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
                  >
                    Ingest Node Pipelines
                  </span>
                </span>
              </div>
            </div>
            <div
              class="euiSideNavItem euiSideNavItem--trunk"
            >
              <div
                class="euiSideNavItemButton"
              >
                <span
                  class="euiSideNavItemButton__content"
                >
                  <span
                    class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
                  >
                    Logstash Pipelines
                  </span>
                </span>
              </div>
            </div>
            <div
              class="euiSideNavItem euiSideNavItem--trunk"
            >
              <div
                class="euiSideNavItemButton"
              >
                <span
                  class="euiSideNavItemButton__content"
                >
                  <span
                    class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
                  >
                    Beats Central Management
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiSideNavItem euiSideNavItem--root euiSideNavItem--hasChildItems"
        >
          <div
            class="euiSideNavItemButton"
          >
            <span
              class="euiSideNavItemButton__content"
            >
              <span
                class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
              >
                Data
              </span>
            </span>
          </div>
          <div
            class="euiSideNavItem__items"
          >
            <div
              class="euiSideNavItem euiSideNavItem--trunk"
            >
              <div
                class="euiSideNavItemButton"
              >
                <span
                  class="euiSideNavItemButton__content"
                >
                  <span
                    class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
                  >
                    Index Management
                  </span>
                </span>
              </div>
            </div>
            <div
              class="euiSideNavItem euiSideNavItem--trunk"
            >
              <div
                class="euiSideNavItemButton"
              >
                <span
                  class="euiSideNavItemButton__content"
                >
                  <span
                    class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
                  >
                    Index Lifecycle Policies
                  </span>
                </span>
              </div>
            </div>
            <div
              class="euiSideNavItem euiSideNavItem--trunk"
            >
              <div
                class="euiSideNavItemButton"
              >
                <span
                  class="euiSideNavItemButton__content"
                >
                  <span
                    class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
                  >
                    Snapshot and Restore
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <button
      aria-label="Collapse side navigation"
      class="euiButtonIcon euiButtonIcon--small kbnPageTemplateSolutionNavCollapseButton emotion-euiButtonIcon-empty-text-hoverStyles"
      title="Collapse side navigation"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="menuLeft"
      />
    </button>
  </div>
  <div
    class="euiPanel euiPanel--plain euiPageBody emotion-euiPanel-grow-none-plain-hasShadow-euiPageBody"
  >
    <div
      class="euiPageBody emotion-euiPageBody-l"
    >
      <header
        class="euiPageHeader emotion-euiPageHeader-headerMargin"
        title="test"
      >
        <div
          class="euiPageHeaderContent emotion-euiPageHeaderContent-border-l"
          style="max-width:1200px"
        >
          <div
            class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-grow-1"
            >
              <div
                class="euiText emotion-euiText-constrainedWidth-m"
              >
                <p>
                  test
                </p>
              </div>
            </div>
            <div
              class="euiFlexItem emotion-euiFlexItem-growZero"
            >
              <div
                class="euiFlexGroup emotion-euiFlexGroup-wrap-l-flexStart-stretch-rowReverse"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  test
                </div>
              </div>
            </div>
          </div>
        </div>
      </header>
      <div
        class="euiPanel euiPanel--transparent euiPageContent euiPageContent--borderRadiusNone emotion-euiPanel-grow-none-transparent"
        role="main"
      >
        <div
          class="euiPageContentBody euiPageContentBody--restrictWidth-default"
        />
      </div>
    </div>
  </div>
</div>
`;
